@@ -12,7 +12,7 @@ APT
 		Upgrade "true";
 		Remove "true";
 	}
-	Status-Fd "1";
+	Status-Fd "13";
 }
 Acquire
 {
