@@ -54,6 +54,7 @@ Depends: ${misc:Depends}, bubba,
  duplicity,
  ncftp,
  libipc-run3-perl,
+ libipc-run-perl,
  bubba-diskmanager,
  libexpect-perl,
  libparse-debcontrol-perl,
